--- a/Proyecto/src/Interfaz/Registro.form
+++ b/Proyecto/src/Interfaz/Registro.form
@@ -125,6 +125,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Registrame"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRegistrarseActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
