--- a/Proyecto/src/Interfaz/Principal.form
+++ b/Proyecto/src/Interfaz/Principal.form
@@ -13,6 +13,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Option"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenu1ActionPerformed"/>
+          </Events>
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="optInicioUsuario">
               <Properties>
