--- a/Proyecto/src/Interfaz/InicioSesionU.form
+++ b/Proyecto/src/Interfaz/InicioSesionU.form
@@ -100,6 +100,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Incio Sesion"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnInicioSesionActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
